--- a/task2.html
+++ b/task2.html
@@ -45,8 +45,8 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-inverse " data-spy="affix" data-offset-top="197">
-        <ul class="nav navbar-nav">
+    <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
+        <ul class="nav navbar-nav ">
             <li class="active">
                 <a href="#">
                     <-- SMIU -->
@@ -56,6 +56,8 @@
             <li><a href="./task2.html">task#2</a></li>
             <li><a href="./task3.html">task#3</a></li>
 
+            <!-- <li><a href="#">Page 2</a></li>
+            <li><a href="#">Page 3</a></li> -->
         </ul>
     </nav>
 
@@ -69,46 +71,30 @@
                     <div class="card-body ">
                         <div class="container genericContainer">
                             <br />
-                            <h2>Area of Screen </h2>
+                            <h2>Temperature Conversion program </h2>
                             <br />
                             <div class="form-group ">
-                                <label for="areal ">Enter Screen Length:</label>
-                                <input type="text " class="form-control " id="areal ">
+                                <label for="value ">Enter Value in Celsius:</label>
+                                <input type="text " class="form-control " id="value ">
                             </div>
-                            <div class="form-group ">
-                                <label for="areaW ">Enter Screen Width:</label>
-                                <input type="text " class="form-control req " id="areaW ">
-                            </div>
-                            <div class="form-group ">
-                                <label for="areaR ">Result:</label>
-                                <input type="text " class="form-control req " id="areaR " readonly>
-                            </div>
-                            <button type="submit " class="btn btn-primary " onclick="area() "> calculate </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div id="media " class="col-md-4 col-xs-12 ">
-                <div class="card ">
-                    <div class="card-body ">
-                        <div class="container genericContainer">
-                            <br />
-                            <h2>Aspect Ratio </h2>
-                            <br />
-                            <div class="form-group ">
-                                <label for="ratiol ">Enter Screen Length:</label>
-                                <input type="text " class="form-control " id="ratiol ">
+                            <div class="form-group">
+                                <!-- <label class="radio-inline">
+                                    <input type="radio" name="optradio" checked>Celsius
+                                  </label> -->
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio">Farenhit
+                                  </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="optradio">Kelvin
+                                  </label>
                             </div>
+
                             <div class="form-group ">
-                                <label for="ratioW ">Enter Screen Width:</label>
-                                <input type="text " class="form-control req " id="ratioW ">
+                                <label for="conversion ">Result:</label>
+                                <input type="text " class="form-control req " id="conversion " readonly>
                             </div>
-                            <div class="form-group ">
-                                <label for="ratioR ">Result:</label>
-                                <input type="text " class="form-control req " id="ratioR " readonly>
-                            </div>
-                            <button type="submit " class="btn btn-primary " onclick="ratioAspect() "> calculate </button>
+                            <button type="submit " class="btn btn-primary " onclick="TemperatureConverstion() "> calculate </button>
                         </div>
                     </div>
                 </div>
