fixed pie specifed precisoin

--- a/task3.html
+++ b/task3.html
@@ -75,14 +75,14 @@
                             <h2>PIE to Check the nth digit after the decimal point </h2>
                             <br />
                             <div class="form-group ">
-                                <label for="l1 ">Enter nth precision:</label>
-                                <input type="text " class="form-control " id="l1 ">
+                                <label for="specifiedPrecision ">Enter nth precision:</label>
+                                <input type="text " class="form-control " id="specifiedPrecision ">
                             </div>
                             <div class="form-group ">
-                                <label for="r1 ">Result of specified nth precision:</label>
-                                <input type="text " class="form-control req " id="r1 " readonly>
+                                <label for="pieResult ">Result of specified nth precision:</label>
+                                <input type="text " class="form-control req " id="pieResult " readonly>
                             </div>
-                            <button type="submit " class="btn btn-primary " onclick="ff() "> calculate </button>
+                            <button type="submit " class="btn btn-primary " onclick="calculation()"> calculate </button>
                         </div>
                     </div>
                 </div>
