fixed font and color

--- a/task3.html
+++ b/task3.html
@@ -40,8 +40,8 @@
 
     <header class="jumbotron jumbotron-fluid">
         <div class="container-fluid text-center">
-            <h1 class="display-6 text-white">Sindh madarsatul islam university </h1>
-            <p class="lead pb-7 text-white ">simple web application</p>
+            <h2><span class="deco">Sindh madarsatul islam university </span></h2>
+            <p><span class="deco">simple web application</span></p>
 
         </div>
     </header>
